force-app/main/default/objects/Suma__c/fields/n1__c.field-meta.xml
<CustomField>
    <fullName>n1__c</fullName>
    <label>n1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>