force-app/main/default/objects/Suma__c/fields/n2__c.field-meta.xml
<CustomField>
    <fullName>n2__c</fullName>
    <label>n2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>