force-app/main/default/objects/Suma__c/fields/resultado__c.field-meta.xml
<CustomField>
    <fullName>resultado__c</fullName>
    <label>resultado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>