force-app/main/default/objects/Suma__c/fields/Valor_Dos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Dos__c</fullName>
    <label>Valor Dos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>