force-app/main/default/objects/Suma__c/fields/Valor_Uno__c.field-meta.xml
<CustomField>
    <fullName>Valor_Uno__c</fullName>
    <label>Valor Uno</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>