force-app/main/default/objects/Suma__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>n1__c</columns>
    <columns>n2__c</columns>
    <columns>resultado__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>